# cookiecutters

./: README.md
fortran/: cookiecutter.json
fortran/{{cookiecutter.repo_name}}/: CMakeLists.txt  Makefile  README.md
fortran/{{cookiecutter.repo_name}}/src/: CMakeLists.txt  main.f90  {{cookiecutter.lib_name}}.f90
fortran/{{cookiecutter.repo_name}}/test/: CMakeLists.txt  testSuites.inc  test_{{cookiecutter.lib_name}}.pfunit
python/: cookiecutter.json
python/python2/{{cookiecutter.repo_name}}/: setup.cfg
python/python2/{{cookiecutter.repo_name}}/conda/: dev-envioronment.yml
python/python2/{{cookiecutter.repo_name}}/doc/: make.bat
python/python2/{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: _version.py
python/{{cookiecutter.repo_name}}/: .travis.yml  MANIFEST.in  README.cookiecutter.md  README.md  README.rst  meta.yaml  setup.cfg  setup.py
python/{{cookiecutter.repo_name}}/.circleci/: config.yml
python/{{cookiecutter.repo_name}}/conda/: dev-environment.yml  meta.yaml
python/{{cookiecutter.repo_name}}/docs/: Makefile  conf.py  index.rst
python2/: cookiecutter.json
python2/{{cookiecutter.repo_name}}/doc/: Makefile  conf.py  index.rst
python2/{{cookiecutter.repo_name}}/test/: test_{{cookiecutter.package_name}}.py
